# project-x

./: .env.example  .gitignore  HANDOFF.md  README.md  RUNBOOK.md  ai_analyzer.py  config.py  daily_scanner.py  how_we_built_it.md  imghdr.py  linkedin_post.md  main.py  mention_responder.py  press_release.md  pyproject.toml  ragebait_knowledge.md  render.yaml  requirements.txt  twitter_client.py
.github/workflows/: daily-thread.yml  mentions.yml
